[tool.poetry]
name = "openbb-tushare"
version = "1.0.1"
description = "OpenBB extension for Tushare"
authors = ["Roger Ye <shugaoye@yahoo.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_tushare" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openbb = "4.5.0"
openbb-core = { version = "^1.5.6" }
tushare = "^1.4.24"
chinese_calendar = "^1.10.0"
mysharelib = "^1.0.4"

[tool.poetry.group.dev.dependencies]
openbb-devtools = { version = "^1.5.3" }
ipykernel = "^6.30.1"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
tushare = "openbb_tushare.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
tushare = "openbb_tushare.provider:provider"
